sg-1128, sg-1129, sg-1130 - Fix issues with logo and text title wrapping in campaign header.

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-campaign.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-campaign.scss
@@ -48,12 +48,14 @@
 
       @include media-max($medium-screen) {
         flex-basis: 20%;
+      }
 
-        .gtranslate_container {
-          margin-right: 0;
+      .gtranslate_container {
+        margin-right: 0;
+
+        @include media-max($medium-screen) {
           position: relative;
           right: unset;
-          top: unset;
         }
       }
     }
